<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageFinder</string>
    <string name="app_title">Find Images</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_search">Search</string>
    <string name="hint_search_images">Enter Search Query</string>
    <string name="image_result_desc">Image Result</string>
    <string name="image_result_title">Title</string>
    <string name="title_activity_image_display">Full Image View</string>
    <string name="title_activity_search_filters">Filter search results</string>
    <string name="adv_search_options">Advanced Search Options</string>
    <string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="filter_color_title">Choose Color</string>
    <string name="filter_type_title">Choose Image Type</string>
    <string name="filter_size_title">Choose Image Size</string>

    <string-array name="filter_color_options">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string-array name="filter_type_options">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>
    <string-array name="filter_size_options">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>
        <string name="hint_site">examplesite.com</string>
        <string name="loading_image">Loading...</string>
        <string name="hint_begin_search">Tap Search to begin searching for images.</string>

</resources>